--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install:
 script:
   - cd $TRAVIS_BUILD_DIR
   - cookiecutter --no-input https://github.com/PrashntS/plump-sr.git
-  - cd plump-sr
+  - cd plumpsr
   - npm install
   - npm run build
 notifications:
